добавлен css исправленны ошибки и зависимости переписаны main и arduino интерфейс для проверки портов и уменьшенна задержка при подключении удаленны методы проверки занятости моба другим персонажем сохраняется задержка переключения на нового моба порядка 9-12 секунд